@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-12-11T01:04:05Z",
+  "timestamp" : "2025-12-18T01:00:31Z",
   "count_outdated" : 1079,
   "uniques_outdated" : 685,
-  "count" : 1081,
-  "uniques" : 687,
+  "count" : 1082,
+  "uniques" : 688,
   "clones" : [
     {
       "timestamp": "2025-12-07T00:00:00Z",
@@ -16,6 +16,15 @@
     },
     {
       "timestamp": "2025-12-10T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-12-17T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
